Modified styling. Fixed left and right overlap. Removed hidden from sections to fix a href view issue.

--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,18 @@
 ******************************************************************************/
 
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; 
 }
 
 html, body {
     display: flex;
     flex-direction: row;
-    
-    justify-content: space-between;
     width: 100%;
     min-height: 100vh;
     margin: 0;
-    font-family: "Roboto";
-    color: white;
-    background: #202731
+    font-family: "Roboto", sans-serif;
+    color: rgb(255, 255, 255);
+    background: rgb(15, 23, 42);
 }
 
 body::-webkit-scrollbar {
@@ -25,18 +23,18 @@ body::-webkit-scrollbar {
 
 #container {
     display: flex;
-    
-    width: 100%;
 }
 
 #left {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: sticky;
     width: 40%;
-    height: 100%;
+    height: 100vh;
+    top: 0;
+    background-color: rgb(30,41,59);
     overflow-y: auto;
-    
 }
 
 #left::-webkit-scrollbar {
@@ -46,10 +44,8 @@ body::-webkit-scrollbar {
 #right {
     display: flex;
     flex-direction: column;
+    position: sticky;
     width: 60%;
-    height: 100%;
-    margin-left: 40%;
-    overflow-y: auto;
 }
 
 #right::-webkit-scrollbar {
@@ -63,24 +59,8 @@ section {
     flex-direction: column;
     align-items: center;
     border-bottom: 2px solid grey;
-    
-    
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-/*
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: teal;
-    width: 100%;
-}*/
 
 .section-header-container {
     display:flex;
@@ -90,14 +70,15 @@ footer {
 }
 
 .section-title {
-    font-size: 70px;
-    font-weight: bold;
-    color: rgb(94 234 212);
+    font-size: 2em;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
 }
 
 .section-intro {
-    font-size: 28px;
-    color: rgb(148 163 184);
+    font-size: 1.5em;
+    font-weight: 300;
+    color: rgb(203, 213, 225);
 }
 
 .button {
@@ -120,7 +101,7 @@ footer {
 }
 
 .text-color-general {
-    color: rgb(148 163 184);
+    color: rgb(203, 213, 225);
 }
 
 
@@ -133,13 +114,20 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-bottom: none;
-    
-    
+    border-bottom: none;    
+}
+
+#hero-title {
+    font-size: 4em;
+    color: rgb(226 232 240);
 }
 
 #hero-intro {
     color: rgb(148 163 184);
+}
+
+#hero-job {
+    color: rgb(226 232 240);
 }
 
 #hero-button-container {
@@ -161,6 +149,11 @@ footer {
     color: black;
 }
 
+.nav-section-link {
+    color: rgb(100, 116, 139);
+    text-decoration: none;
+}
+
 
 /******************************************************************************
                         ABOUT ME SECTION
@@ -175,7 +168,6 @@ footer {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-
 }
 
 #about-intro-content {
@@ -213,11 +205,7 @@ footer {
     margin: 1em;
 }
 
-
 #skill-languages-container {
-    /*
-    border: 2px, black, solid;
-    border-radius: 0.5em;*/
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -228,12 +216,9 @@ footer {
     border-radius: 0.5em;
     box-shadow: 5px 5px;
     color: teal;
-    
 }
 
 #skill-icons-container {
-    /*border: 2px, black, solid;
-    border-radius: 0.5em;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -242,7 +227,6 @@ footer {
     border-radius: 0.5em;
     box-shadow: 5px 5px;
     color: teal;
-    
 }
 
 .skill-icons-row {
@@ -252,15 +236,15 @@ footer {
 }
 
 .skill-icons-row:nth-child(1) {
-    transition-delay: 400ms;
+    transition-delay: 0ms;
 }
 
 .skill-icons-row:nth-child(2) {
-    transition-delay: 600ms;
+    transition-delay: 0ms;
 }
 
 .skill-icons-row:nth-child(3) {
-    transition-delay: 800ms;
+    transition-delay: 0ms;
 }
 
 
